--- a/resources/lang/cs.json
+++ b/resources/lang/cs.json
@@ -26,16 +26,6 @@
     "No Featured Posts Yet": "Zatím žádné doporučené příspěvky",
     "Check back soon for the latest updates from our sports club!": "Brzy se vraťte pro nejnovější aktuality z našeho sportovního klubu!",
     "Write First Post": "Napsat první příspěvek",
-    "Tournament Generator": "Generátor turnajů",
-    "Generate New Tournament": "Vytvořit nový turnaj",
-    "Number of Fighters/Teams": "Počet bojovníků/týmů",
-    "Tournament Type": "Typ turnaje",
-    "Single Elimination": "Pavouk",
-    "Single Elimination with Preliminary": "Pavouk s předkoly",
-    "Playoff": "Playoff",
-    "Team Competition": "Týmová soutěž",
-    "Preliminary Group Size": "Velikost předkolové skupiny",
-    "Generate Tournament": "Generovat turnaj",
     "About Our Sports Club": "O našem sportovním klubu",
     "Matches & Fixtures": "Zápasy a rozpis",
     "Match Results": "Výsledky zápasů",
@@ -55,5 +45,32 @@
     "Administration": "Administrace",
     "Blog Management": "Správa blogu",
     "App Management": "Správa aplikace",
-    "User Management": "Správa uživatelů"
-    }
+    "User Management": "Správa uživatelů",
+    "Tournament Generator": "Generátor turnajů",
+    "Generate New Tournament": "Vytvořit nový turnaj",
+    "Number of Fighters/Teams": "Počet bojovníků/týmů",
+    "Tournament Type": "Typ turnaje",
+    "Single Elimination": "Pavouk",
+    "Single Elimination with Preliminary": "Pavouk s předkoly",
+    "Playoff": "Playoff",
+    "Team Competition": "Týmová soutěž",
+    "Preliminary Group Size": "Velikost předkolové skupiny",
+    "Generate Tournament": "Generovat turnaj",
+    "Championship": "Šampionát",
+    "Championship Details": "Detaily šampionátu",
+    "Type": "Typ",
+    "Team": "Tým",
+    "Individual": "Individuální",
+    "Teams": "Týmy",
+    "Fighters": "Bojovníci",
+    "Tree Type": "Typ pavouka",
+    "Not Set": "Nenastaveno",
+    "Preliminary": "Předkola",
+    "Yes": "Ano",
+    "No": "Ne",
+    "Competitors": "Soutěžící",
+    "Unknown Team": "Neznámý tým",
+    "Unknown Competitor": "Neznámý soutěžící",
+    "Single Elimination Tree": "Pavouk vyřazovací soutěže",
+    "Fights Schedule": "Rozpis zápasů"
+}
