--- a/resources/lang/cs.json
+++ b/resources/lang/cs.json
@@ -13,19 +13,7 @@
     "Dashboard": "Profil",
     "Players": "Hráči",
     "Photo Gallery": "Fotogalerie",
-    "Sports Club": "Sportovní klub",
-    "Latest News & Updates": "Nejnovější zprávy a aktuality",
-    "Stay Updated": "Zůstaňte v obraze",
-    "Get the latest news from our sports club delivered to your inbox.": "Dostávejte nejnovější zprávy z našeho sportovního klubu přímo do vaší e-mailové schránky.",
-    "Your email address": "Vaše e-mailová adresa",
-    "Subscribe": "Odebírat",
-    "Popular Posts": "Populární příspěvky",
-    "Topics": "Témata",
     "Published on": "Publikováno",
-    "Read Full Story": "Přečíst celý příspěvek",
-    "No Featured Posts Yet": "Zatím žádné doporučené příspěvky",
-    "Check back soon for the latest updates from our sports club!": "Brzy se vraťte pro nejnovější aktuality z našeho sportovního klubu!",
-    "Write First Post": "Napsat první příspěvek",
     "About Our Sports Club": "O našem sportovním klubu",
     "Matches & Fixtures": "Zápasy a rozpis",
     "Match Results": "Výsledky zápasů",
@@ -72,5 +60,19 @@
     "Unknown Team": "Neznámý tým",
     "Unknown Competitor": "Neznámý soutěžící",
     "Single Elimination Tree": "Pavouk vyřazovací soutěže",
-    "Fights Schedule": "Rozpis zápasů"
+    "Fights Schedule": "Rozpis zápasů",
+    "Read Full Story": "Přečíst celý příspěvek",
+    "No Featured Posts Yet": "Zatím žádné doporučené příspěvky",
+    "Check back soon for the latest updates from our sports club!": "Brzy se vraťte pro nejnovější aktuality z našeho sportovního klubu!",
+    "Write First Post": "Napsat první příspěvek",
+    "Latest News & Updates": "Nejnovější zprávy a aktuality",
+    "Sports Club": "Sportovní klub",
+    "Read": "Přečíst",
+    "No News Yet": "Zatím žádné zprávy",
+    "Popular Posts": "Populární příspěvky",
+    "Topics": "Témata",
+    "Stay Updated": "Zůstaňte v obraze",
+    "Get the latest news from our sports club delivered to your inbox.": "Dostávejte nejnovější zprávy z našeho sportovního klubu přímo do vaší e-mailové schránky.",
+    "Your email address": "Vaše e-mailová adresa",
+    "Subscribe": "Odebírat"
 }
