--- a/resources/lang/cs.json
+++ b/resources/lang/cs.json
@@ -6,12 +6,11 @@
     "Calendar": "Kalendář",
     "About Us": "O nás",
     "Membership": "Členství",
-    "Trainer Panel": "Trenéři",
+    "Account": "Účet",
     "Canvas": "Správa blogu",
     "Admin": "Správa aplikace",
     "Users": "Správa uživatelů",
     "Dashboard": "Profil",
-    "Players": "Hráči",
     "Photo Gallery": "Fotogalerie",
     "Published on": "Publikováno",
     "About Our Sports Club": "O našem sportovním klubu",
@@ -20,15 +19,6 @@
     "Login": "Přihlásit se",
     "Register": "Registrovat se",
     "Logout": "Odhlásit se",
-    "Your Membership": "Vaše členství",
-    "Manage your club membership and benefits.": "Spravujte své klubové členství a výhody.",
-    "View Membership": "Zobrazit členství",
-    "Player Profile": "Profil hráče",
-    "Update your player information and preferences.": "Aktualizujte své herní informace a preference.",
-    "Manage Profile": "Spravovat profil",
-    "Quick Links": "Rychlé odkazy",
-    "Contact": "Kontakt",
-    "Your premier destination for sports management and tournament organization.": "Vaše hlavní destinace pro správu sportů a organizaci turnajů.",
     "All rights reserved.": "Všechna práva vyhrazena.",
     "Administration": "Administrace",
     "Blog Management": "Správa blogu",
@@ -66,7 +56,6 @@
     "Check back soon for the latest updates from our sports club!": "Brzy se vraťte pro nejnovější aktuality z našeho sportovního klubu!",
     "Write First Post": "Napsat první příspěvek",
     "Latest News & Updates": "Nejnovější zprávy a aktuality",
-    "Sports Club": "Sportovní klub",
     "Read": "Přečíst",
     "No News Yet": "Zatím žádné zprávy",
     "Popular Posts": "Populární příspěvky",
@@ -74,5 +63,116 @@
     "Stay Updated": "Zůstaňte v obraze",
     "Get the latest news from our sports club delivered to your inbox.": "Dostávejte nejnovější zprávy z našeho sportovního klubu přímo do vaší e-mailové schránky.",
     "Your email address": "Vaše e-mailová adresa",
-    "Subscribe": "Odebírat"
+    "Subscribe": "Odebírat",
+    "Profile": "Profil",
+    "Administrator Panel": "Administrátorský panel",
+    "You have administrative privileges.": "Máte administrátorská oprávnění.",
+    "Manage Users": "Spravovat uživatele",
+    "Trainer Panel": "Tréninky",
+    "Access your training tools and schedules.": "Přístup k vašim tréninkovým nástrojům a rozvrhům.",
+    "Go to Trainer Dashboard": "Přejít na trenérský dashboard",
+    "Your Membership": "Vaše členství",
+    "Manage your club membership and benefits.": "Spravujte své klubové členství a výhody.",
+    "View Membership": "Zobrazit členství",
+    "Player Profile": "Profil hráče",
+    "Update your player information and preferences.": "Aktualizujte své herní informace a preference.",
+    "Manage Profile": "Spravovat profil",
+    "Membership Management": "Správa členství",
+    "QR code format validation failed. Using test IBAN from Czech specification.": "Validace formátu QR kódu selhala. Používám testovací IBAN z české specifikace.",
+    "Your Membership Status": "Stav vašeho členství",
+    "Active Member": "Aktivní člen",
+    "Your membership is active. Thank you for being part of our club!": "Vaše členství je aktivní. Děkujeme, že jste součástí našeho klubu!",
+    "Are you sure you want to leave the membership?": "Jste si jisti, že chcete opustit členství?",
+    "Leave Membership": "Opustit členství",
+    "Not a Member": "Nejste členem",
+    "Join our club to access exclusive benefits and features.": "Připojte se k našemu klubu pro přístup k exkluzivním výhodám a funkcím.",
+    "Become a Member": "Stát se členem",
+    "Tournament Access": "Přístup k turnajům",
+    "Participate in exclusive club tournaments": "Účastněte se exkluzivních klubových turnajů",
+    "Event Priority": "Přednost na akcích",
+    "Early access to events and training sessions": "Přednostní přístup k akcím a tréninkům",
+    "Premium Features": "Prémiové funkce",
+    "Access to advanced training resources": "Přístup k pokročilým tréninkovým zdrojům",
+    "QR Data": "QR data",
+    "No data": "Žádná data",
+    "Format Valid": "Formát platný",
+    "Test IBAN": "Testovací IBAN",
+    "from official specification": "z oficiální specifikace",
+    "Using official test data from Czech QR Platba specification": "Používám oficiální testovací data z české specifikace QR Platba",
+    "Scan the QR code to complete your membership payment": "Naskenujte QR kód pro dokončení platby za členství",
+    "Scan to simulate payment": "Naskenujte pro simulaci platby",
+    "QR Code Error": "Chyba QR kódu",
+    "QR code failed to generate": "QR kód se nepodařilo vygenerovat",
+    "Payment Details": "Detaily platby",
+    "Amount": "Částka",
+    "Beneficiary": "Příjemce",
+    "Bank": "Banka",
+    "Variable Symbol": "Variabilní symbol",
+    "Using Official Test Data": "Používám oficiální testovací data",
+    "From Czech QR Platba specification": "Z české specifikace QR Platba",
+    "Scan with": "Naskenujte pomocí",
+    "Any Czech banking app (AirBank, ČSOB, KB, etc.)": "Jakékoli české bankovní aplikace (AirBank, ČSOB, KB, atd.)",
+    "After making the payment": "Po provedení platby",
+    "I've Paid - Confirm Now": "Zaplatil jsem - Potvrdit nyní",
+    "You'll be redirected to confirm your payment and activate membership": "Budete přesměrováni k potvrzení platby a aktivaci členství",
+    "Payment Verified": "Platba ověřena",
+    "Your membership is active!": "Vaše členství je aktivní!",
+    "Cancel": "Zrušit",
+    "Simulate Payment (Test)": "Simulovat platbu (Test)",
+    "Sports Club": "Sportovní klub",
+    "Your premier destination for sports management and tournament organization.": "Vaše hlavní destinace pro správu sportů a organizaci turnajů.",
+    "Quick Links": "Rychlé odkazy",
+    "Players": "Hráči",
+    "Contact": "Kontakt",
+    "Email": "Email",
+    "Phone": "Telefon",
+    "Licence": "GPL-3 Licence",
+    "Tags": "Tagy",
+    "Related Posts": "Související příspěvky",
+    "Back to Home": "Zpět na novinky",
+    "Topic: :name": "Téma: :name",
+    ":count post in this category|:count posts in this category": "{1} :count příspěvek v této kategorii|[2,4] :count příspěvky v této kategorii|[5,*] :count příspěvků v této kategorii",
+    ":count view|:count views": "{1} :count zobrazení|[2,4] :count zobrazení|[5,*] :count zobrazení",
+    "Sports Club App": "Sportovní klub aplikace",
+    "This is a secure area of the application. Please confirm your password before continuing.": "Toto je zabezpečená oblast aplikace. Před pokračováním potvrďte své heslo.",
+    "Confirm": "Potvrdit",
+    "Forgot your password? No problem. Just let us know your email address and we will email you a password reset link that will allow you to choose a new one.": "Zapomněli jste heslo? Žádný problém. Stačí nám sdělit vaši e-mailovou adresu a my vám zašleme odkaz pro obnovení hesla, který vám umožní zvolit si nové.",
+    "Email Password Reset Link": "Odeslat odkaz pro obnovení hesla",
+    "Remember me": "Zapamatovat si mě",
+    "Forgot your password?": "Zapomněli jste heslo?",
+    "Log in": "Přihlásit se",
+    "First Name": "Křestní jméno",
+    "Last Name": "Příjmení",
+    "Confirm Password": "Potvrzení hesla",
+    "I agree to the storage and processing of my personal data in accordance with GDPR": "Souhlasím se zpracováním a uchováním mých osobních údajů v souladu s GDPR",
+    "Already registered?": "Již jste registrovaní?",
+    "Reset Password": "Obnovit heslo",
+    "Thanks for signing up! Before getting started, could you verify your email address by clicking on the link we just emailed to you? If you didn't receive the email, we will gladly send you another.": "Děkujeme za registraci! Než začnete, mohli byste ověřit svou e-mailovou adresu kliknutím na odkaz, který jsme vám právě poslali e-mailem? Pokud jste e-mail neobdrželi, rádi vám zašleme další.",
+    "A new verification link has been sent to the email address you provided during registration.": "Nový ověřovací odkaz byl odeslán na e-mailovou adresu, kterou jste uvedli při registraci.",
+    "Resend Verification Email": "Znovu odeslat ověřovací e-mail",
+    "Log Out": "Odhlásit se",
+    "min read": "min. četba",
+    "January": "Leden",
+    "February": "Únor",
+    "March": "Březen",
+    "April": "Duben",
+    "May": "Květen",
+    "June": "Červen",
+    "July": "Červenec",
+    "August": "Srpen",
+    "September": "Září",
+    "October": "Říjen",
+    "November": "Listopad",
+    "December": "Prosinec",
+    "Jan": "Led",
+    "Feb": "Úno",
+    "Mar": "Bře",
+    "Apr": "Dub",
+    "Jun": "Čvn",
+    "Jul": "Čvc",
+    "Aug": "Srp",
+    "Sep": "Zář",
+    "Oct": "Říj",
+    "Nov": "Lis",
+    "Dec": "Pro"
 }
