--- a/resources/lang/cs.json
+++ b/resources/lang/cs.json
@@ -10,7 +10,7 @@
     "Canvas": "Správa blogu",
     "Admin": "Správa aplikace",
     "Users": "Správa uživatelů",
-    "Dashboard": "Profil",
+    "Dashboard": "Nástěnka",
     "Photo Gallery": "Fotogalerie",
     "Published on": "Publikováno",
     "About Our Sports Club": "O našem sportovním klubu",
