--- a/resources/lang/cs.json
+++ b/resources/lang/cs.json
@@ -174,5 +174,6 @@
     "Sep": "Zář",
     "Oct": "Říj",
     "Nov": "Lis",
-    "Dec": "Pro"
+    "Dec": "Pro",
+    "No images yet": "Žádné obrázky nenalezeny"
 }
