--- a/resources/lang/cs.json
+++ b/resources/lang/cs.json
@@ -58,7 +58,7 @@
     "Latest News & Updates": "Nejnovější zprávy a aktuality",
     "Read": "Přečíst",
     "No News Yet": "Zatím žádné zprávy",
-    "Popular Posts": "Populární příspěvky",
+    "Popular Posts": "Archiv příspěvků",
     "Topics": "Témata",
     "Stay Updated": "Zůstaňte v obraze",
     "Get the latest news from our sports club delivered to your inbox.": "Dostávejte nejnovější zprávy z našeho sportovního klubu přímo do vaší e-mailové schránky.",
@@ -128,7 +128,7 @@
     "Phone": "Telefon",
     "Licence": "GPL-3 Licence",
     "Tags": "Tagy",
-    "Related Posts": "Související příspěvky",
+    "Related Posts": "Ostatní příspěvky",
     "Back to Home": "Zpět na novinky",
     "Topic: :name": "Téma: :name",
     ":count post in this category|:count posts in this category": "{1} :count příspěvek v této kategorii|[2,4] :count příspěvky v této kategorii|[5,*] :count příspěvků v této kategorii",
