--- a/resources/lang/cs.json
+++ b/resources/lang/cs.json
@@ -89,10 +89,10 @@
     "Become a Member": "Stát se členem",
     "Tournament Access": "Přístup k turnajům",
     "Participate in exclusive club tournaments": "Účastněte se exkluzivních klubových turnajů",
-    "Event Priority": "Přednost na akcích",
-    "Early access to events and training sessions": "Přednostní přístup k akcím a tréninkům",
+    "Event Priority": "Přístup k akcím",
+    "Early access to events and training sessions": "Přístup k rozhvrhovým akcím",
     "Premium Features": "Prémiové funkce",
-    "Access to advanced training resources": "Přístup k pokročilým tréninkovým zdrojům",
+    "Access to advanced training resources": "Přístup k pokročilým funkcím",
     "QR Data": "QR data",
     "No data": "Žádná data",
     "Format Valid": "Formát platný",
