--- a/resources/lang/cs.json
+++ b/resources/lang/cs.json
@@ -175,5 +175,81 @@
     "Oct": "Říj",
     "Nov": "Lis",
     "Dec": "Pro",
-    "No images yet": "Žádné obrázky nenalezeny"
+    "No images yet": "Žádné obrázky nenalezeny",
+    "Create New Tournament": "Vytvořit nový turnaj",
+    "Select Existing Tournament": "Vybrat existující turnaj",
+    "Tournament Name": "Název turnaje",
+    "Tournament Date": "Datum turnaje",
+    "Created": "Vytvořeno",
+    "Delete Tournament": "Smazat turnaj",
+    "Delete Championship": "Smazat šampionát",
+    "No tournaments created yet. Generate your first tournament above!": "Zatím nebyly vytvořeny žádné turnaje. Vytvořte svůj první turnaj výše!",
+    "No championship in this tournament yet.": "V tomto turnaji zatím nejsou žádné šampionáty.",
+    "No tournament tree generated yet for this championship.": "Pro tento šampionát zatím nebyl vygenerován žádný pavouk.",
+    "Update Tree": "Aktualizovat pavouk",
+    "Join Tournament": "Přihlásit se do turnaje",
+    "Leave Tournament": "Odhlásit se z turnaje",
+    "You are registered for this tournament": "Jste přihlášeni do tohoto turnaje",
+    "Sign up for this tournament": "Přihlásit se do tohoto turnaje",
+    "Tournament is full": "Turnaj je plný",
+    "Registration closed": "Registrace uzavřena",
+    "Available spots": "Volná místa",
+    "Tournament Details": "Detaily turnaje",
+    "Tournament List": "Seznam turnajů",
+    "View Tournament": "Zobrazit turnaj",
+    "Back to Tournaments": "Zpět na turnaje",
+    "You must be a member to join tournaments": "Pro přihlášení do turnajů musíte být členem",
+    "Only trainers and administrators can manage tournaments": "Pouze trenéři a administrátoři mohou spravovat turnaje",
+    "Manage Tournaments": "Spravovat turnaje",
+    "View Details": "Zobrazit detaily",
+    "Tree Generated": "Pavouk vygenerován",
+    "Not Started": "Nezahájeno",
+    "No tournaments available": "Žádné turnaje k dispozici",
+    "Check back later for upcoming tournaments.": "Vraťte se později pro nadcházející turnaje.",
+    "Manage Tournament": "Spravovat turnaj",
+    "Tournament Information": "Informace o turnaji",
+    "Participation": "Účast",
+    "Are you sure you want to leave this tournament?": "Jste si jisti, že chcete opustit tento turnaj?",
+    "Unlimited": "Neomezeno",
+    "Please log in to join this tournament": "Pro přihlášení do turnaje se prosím přihlaste",
+    "Participants": "Účastníci",
+    "You": "Vy",
+    "No participants yet": "Zatím žádní účastníci",
+    "Be the first to join this tournament!": "Buďte první, kdo se připojí k tomuto turnaji!",
+    "Tournament tree not generated yet": "Pavouk turnaje zatím nebyl vygenerován",
+    "The tournament organizer will generate the tree when ready.": "Organizátor turnaje vygeneruje pavouk, až bude připraven.",
+    "Tournament Management": "Správa turnajů",
+    "Access Denied": "Přístup odepřen",
+    "View Public Tournaments": "Zobrazit veřejné turnaje",
+    "View Public": "Zobrazit veřejně",
+    "View": "Zobrazit",
+    "Are you sure you want to delete this tournament and all its championships?": "Jste si jisti, že chcete smazat tento turnaj a všechny jeho šampionáty?",
+    "Are you sure you want to delete this championship?": "Jste si jisti, že chcete smazat tento šampionát?",
+    "Championships": "Šampionáty",
+    "Tournament Tree": "Turnajový strom",
+    "Tournament tree generated successfully!": "Pavouk turnaje byl úspěšně vygenerován!",
+    "Fight results updated successfully!": "Výsledky zápasů byly úspěšně aktualizovány!",
+    "Successfully joined tournament": "Úspěšně jste se přihlásili do turnaje",
+    "Successfully left tournament": "Úspěšně jste opustili turnaj",
+    "You are already registered for this tournament": "Již jste přihlášeni do tohoto turnaje",
+    "Error joining tournament": "Chyba při přihlašování do turnaje",
+    "Error leaving tournament": "Chyba při odhlašování z turnaje",
+    "Tree generation failed": "Generování pavouka selhalo",
+    "Unexpected error": "Neočekávaná chyba",
+    "Tournament deleted successfully!": "Turnaj byl úspěšně smazán!",
+    "Championship deleted successfully!": "Šampionát byl úspěšně smazán!",
+    "Available Spot": "Volné místo",
+    "You are not registered for this tournament": "Nejste přihlášeni do tohoto turnaje",
+    "registered": "přihlášeno",
+    "total": "celkem",
+    "Max": "Max",
+    "No single elimination tree generated yet. Please generate the tournament tree first.": "Pavouk zatím nebyl vygenerován. Nejprve prosím vygenerujte pavouk turnaje.",
+    "No fighter groups found for this championship.": "Pro tento šampionát nebyly nalezeny žádné skupiny bojovníků.",
+    "No single elimination rounds found (only preliminary rounds may exist).": "Nebyly nalezeny žádné kola pavouka (mohou existovat pouze předkolová kola).",
+    "Tournament tree was generated but no brackets could be displayed. This might be due to insufficient participants or a configuration issue.": "Pavouk turnaje byl vygenerován, ale nelze zobrazit zápasy. To může být způsobeno nedostatečným počtem účastníků nebo konfigurační chybou.",
+    "Id": "ID",
+    "Competitor 1": "Bojovník 1",
+    "Competitor 2": "Bojovník 2",
+    "Area": "Aréna",
+    "TBD": "TBD"
 }
