--- a/resources/lang/cs.json
+++ b/resources/lang/cs.json
@@ -186,7 +186,7 @@
     "No tournaments created yet. Generate your first tournament above!": "Zatím nebyly vytvořeny žádné turnaje. Vytvořte svůj první turnaj výše!",
     "No championship in this tournament yet.": "V tomto turnaji zatím nejsou žádné šampionáty.",
     "No tournament tree generated yet for this championship.": "Pro tento šampionát zatím nebyl vygenerován žádný pavouk.",
-    "Update Tree": "Aktualizovat pavouk",
+    "Update Tree": "Aktualizovat pavouka",
     "Join Tournament": "Přihlásit se do turnaje",
     "Leave Tournament": "Odhlásit se z turnaje",
     "You are registered for this tournament": "Jste přihlášeni do tohoto turnaje",
@@ -220,12 +220,13 @@
     "The tournament organizer will generate the tree when ready.": "Organizátor turnaje vygeneruje pavouk, až bude připraven.",
     "Tournament Management": "Správa turnajů",
     "Access Denied": "Přístup odepřen",
-    "View Public Tournaments": "Zobrazit veřejné turnaje",
+    "View Public Tournaments": "Zobrazit seznam turnajů",
     "View Public": "Zobrazit veřejně",
     "View": "Zobrazit",
     "Are you sure you want to delete this tournament and all its championships?": "Jste si jisti, že chcete smazat tento turnaj a všechny jeho šampionáty?",
     "Are you sure you want to delete this championship?": "Jste si jisti, že chcete smazat tento šampionát?",
     "Championships": "Šampionáty",
+    "Existing Tournaments": "Existující Turnaje",
     "Tournament Tree": "Turnajový strom",
     "Tournament tree generated successfully!": "Pavouk turnaje byl úspěšně vygenerován!",
     "Fight results updated successfully!": "Výsledky zápasů byly úspěšně aktualizovány!",
