--- a/resources/lang/cs.json
+++ b/resources/lang/cs.json
@@ -41,7 +41,7 @@
     "Individual": "Individuální",
     "Teams": "Týmy",
     "Fighters": "Bojovníci",
-    "Tree Type": "Typ pavouka",
+    "Tree Type": "Organizace turnaje",
     "Not Set": "Nenastaveno",
     "Preliminary": "Předkola",
     "Yes": "Ano",
@@ -202,7 +202,7 @@
     "Only trainers and administrators can manage tournaments": "Pouze trenéři a administrátoři mohou spravovat turnaje",
     "Manage Tournaments": "Spravovat turnaje",
     "View Details": "Zobrazit detaily",
-    "Tree Generated": "Pavouk vygenerován",
+    "Tree Generated": "Otevřený",
     "Not Started": "Nezahájeno",
     "No tournaments available": "Žádné turnaje k dispozici",
     "Check back later for upcoming tournaments.": "Vraťte se později pro nadcházející turnaje.",
