--- a/resources/lang/cs.json
+++ b/resources/lang/cs.json
@@ -204,8 +204,8 @@
     "View Details": "Zobrazit detaily",
     "Tree Generated": "Otevřený",
     "Not Started": "Nezahájeno",
-    "No tournaments available": "Žádné turnaje k dispozici",
-    "Check back later for upcoming tournaments.": "Vraťte se později pro nadcházející turnaje.",
+    "No tournaments available": "Žádné turnaje nejsou k dispozici",
+    "Check back later for upcoming tournaments.": "Zkuste se vrátit později.",
     "Manage Tournament": "Spravovat turnaj",
     "Tournament Information": "Informace o turnaji",
     "Participation": "Účast",
@@ -245,12 +245,12 @@
     "total": "celkem",
     "Max": "Max",
     "No single elimination tree generated yet. Please generate the tournament tree first.": "Pavouk zatím nebyl vygenerován. Nejprve prosím vygenerujte pavouk turnaje.",
-    "No fighter groups found for this championship.": "Pro tento šampionát nebyly nalezeny žádné skupiny bojovníků.",
+    "No fighter groups found for this championship.": "Pro tento šampionát nebyly nalezeny žádné skupiny soutěžících.",
     "No single elimination rounds found (only preliminary rounds may exist).": "Nebyly nalezeny žádné kola pavouka (mohou existovat pouze předkolová kola).",
     "Tournament tree was generated but no brackets could be displayed. This might be due to insufficient participants or a configuration issue.": "Pavouk turnaje byl vygenerován, ale nelze zobrazit zápasy. To může být způsobeno nedostatečným počtem účastníků nebo konfigurační chybou.",
     "Id": "ID",
-    "Competitor 1": "Bojovník 1",
-    "Competitor 2": "Bojovník 2",
+    "Competitor 1": "Soutěžící 1",
+    "Competitor 2": "Soutěžící 2",
     "Area": "Aréna",
     "TBD": "TBD",
     "Quarter-Finals": "Čtvrtfinále",
@@ -270,5 +270,6 @@
     "Upcoming Tournaments": "Nadcházející turnaje",
     "Past Tournaments": "Minulé turnaje",
     "Completed": "Dokončen",
-    "Not Completed": "Nedokončen"
+    "Not Completed": "Nedokončen",
+    "Expires:": "Vyprší:"
 }
