--- a/resources/lang/cs.json
+++ b/resources/lang/cs.json
@@ -69,7 +69,7 @@
     "You have administrative privileges.": "Máte administrátorská oprávnění.",
     "Manage Users": "Spravovat uživatele",
     "Trainer Panel": "Tréninky",
-    "Access your training tools and schedules.": "Přístup k vašim tréninkovým nástrojům a rozvrhům.",
+    "Access your training tools and schedules.": "Máte přístup k tréninkovým nástrojům a rozvrhům.",
     "Go to Trainer Dashboard": "Přejít na trenérský dashboard",
     "Your Membership": "Vaše členství",
     "Manage your club membership and benefits.": "Spravujte své klubové členství a výhody.",
