--- a/resources/lang/cs.json
+++ b/resources/lang/cs.json
@@ -271,5 +271,6 @@
     "Past Tournaments": "Minulé turnaje",
     "Completed": "Dokončen",
     "Not Completed": "Nedokončen",
-    "Expires:": "Vyprší:"
+    "Expires:": "Vyprší:",
+    "available": "volných míst"
 }
