--- a/resources/lang/cs.json
+++ b/resources/lang/cs.json
@@ -143,6 +143,7 @@
     "Log in": "Přihlásit se",
     "First Name": "Křestní jméno",
     "Last Name": "Příjmení",
+    "Password": "Heslo",
     "Confirm Password": "Potvrzení hesla",
     "I agree to the storage and processing of my personal data in accordance with GDPR": "Souhlasím se zpracováním a uchováním mých osobních údajů v souladu s GDPR",
     "Already registered?": "Již jste registrovaní?",
