--- a/resources/lang/cs.json
+++ b/resources/lang/cs.json
@@ -272,9 +272,23 @@
     "Past Tournaments": "Minulé turnaje",
     "Completed": "Dokončen",
     "Not Completed": "Nedokončen",
-    "Expires:": "Vyprší:",
     "available": "volných míst",
     "Payment rejected and user notified.": "Členství odmítnuto a uživatel byl upozorněn.",
-    "After confirmation, administrators will verify your payment within 1-2 business days": "Potvrzení platby ze strany klubu může trvat 1 až 2 dny.",
-    "Confirm Payment": "Potvrdit platbu"
+    "Preliminary Round": "Předkolo",
+    "Round 1": "1. kolo",
+    "Round 2": "2. kolo",
+    "Round 3": "3. kolo",
+    "Waiting for confirmation": "Čekání na potvrzení",
+    "Pending approval": "Čeká na schválení",
+    "Expires:": "Platné do:",
+    "Membership valid until:": "Členství bude platné do:",
+    "Waiting for Payment Confirmation": "Čeká na potvrzení platby",
+    "Your payment has been submitted and is waiting for administrator approval.": "Vaše platba byla odeslána a čeká na schválení administrátorem.",
+    "Reference number:": "Variabilní symbol:",
+    "Submitted:": "Odesláno:",
+    "Are you sure you want to cancel your payment?": "Jste si jisti, že chcete zrušit platbu?",
+    "Cancel Payment": "Zrušit platbu",
+    "Confirm Payment": "Potvrdit platbu",
+    "After confirmation, administrators will verify your payment within 1-2 business days": "Po potvrzení administrátoři ověří vaši platbu do 1-2 pracovních dnů",
+    "Please confirm that you have sent the payment": "Potvrďte prosím, že jste odeslali platbu"
 }
